# router/app.go
@@ -24,7 +24,7 @@ func Router() *gin.Engine {
 	r.GET("/problem-detail", service.GetProblemDetail)
 	// 用户
 	r.GET("/user-detail", service.GetUserDetail)
-	//r.POST("/login", service.Login)
+	r.POST("/login", service.Login)
 	//r.POST("/send-code", service.SendCode)
 	//r.POST("/register", service.Register)
 	//// 排行榜
