# service/user.go
@@ -1,8 +1,10 @@
 package service
 
 import (
+	"YourProjectName/helper"
 	"YourProjectName/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"net/http"
 )
 
@@ -36,59 +38,59 @@ func GetUserDetail(c *gin.Context) {
 	})
 }
 
-//// Login
-//// @Tags 公共方法
-//// @Summary 用户登录
-//// @Param username formData string false "username"
-//// @Param password formData string false "password"
-//// @Success 200 {string} json "{"code":"200","data":""}"
-//// @Router /login [post]
-//func Login(c *gin.Context) {
-//	username := c.PostForm("username")
-//	password := c.PostForm("password")
-//	if username == "" || password == "" {
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "必填信息为空",
-//		})
-//		return
-//	}
-//	password = helper.GetMd5(password)
-//
-//	data := new(models.UserBasic)
-//	err := models.DB.Where("name = ? AND password = ? ", username, password).First(&data).Error
-//	if err != nil {
-//		if err == gorm.ErrRecordNotFound {
-//			c.JSON(http.StatusOK, gin.H{
-//				"code": -1,
-//				"msg":  "用户名或密码错误",
-//			})
-//			return
-//		}
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "Get UserBasic Error:" + err.Error(),
-//		})
-//		return
-//	}
-//
-//	token, err := helper.GenerateToken(data.Identity, data.Name, data.IsAdmin)
-//	if err != nil {
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "GenerateToken Error:" + err.Error(),
-//		})
-//		return
-//	}
-//	c.JSON(http.StatusOK, gin.H{
-//		"code": 200,
-//		"data": map[string]interface{}{
-//			"token":    token,
-//			"is_admin": data.IsAdmin,
-//		},
-//	})
-//}
-//
+// Login
+// @Tags 公共方法
+// @Summary 用户登录
+// @Param username formData string false "username"
+// @Param password formData string false "password"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /login [post]
+func Login(c *gin.Context) {
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	if username == "" || password == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "必填信息为空",
+		})
+		return
+	}
+	password = helper.GetMd5(password)
+	//print(username,password)
+	data := new(models.UserBasic)
+	err := models.DB.Where("name = ? AND password = ? ", username, password).First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "用户名或密码错误",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get UserBasic Error:" + err.Error(),
+		})
+		return
+	}
+
+	token, err := helper.GenerateToken(data.Identity, data.Name, data.IsAdmin)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "GenerateToken Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"token":    token,
+			"is_admin": data.IsAdmin,
+		},
+	})
+}
+
 //// SendCode
 //// @Tags 公共方法
 //// @Summary 发送验证码
